# gulfi

./: .gitignore  Cargo.toml  Justfile  README.md  deny.toml  flake.nix  meta.json  package.json  sonar-project.properties
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: check.yml  test.yml
assets/: main.js
crates/gulfi/: Cargo.toml
crates/gulfi-cli/: Cargo.toml
crates/gulfi-cli/src/: clierror.rs  helper.rs  lib.rs
crates/gulfi-cli/src/commands/: configuration.rs  documents.rs  list.rs  migrations.rs  mod.rs  server.rs  setup_db.rs  sync.rs  users.rs
crates/gulfi-common/: Cargo.toml
crates/gulfi-common/src/: datasources.rs  domain.rs  fallback.rs  into_http.rs  lib.rs
crates/gulfi-configuration/: Cargo.toml
crates/gulfi-configuration/src/: lib.rs
crates/gulfi-helper/: Cargo.toml
crates/gulfi-helper/src/: lib.rs
crates/gulfi-ingest/: Cargo.toml
crates/gulfi-ingest/src/: lib.rs
crates/gulfi-ingest/src/reader/: datasources.rs  mod.rs
crates/gulfi-ingest/src/sqlite/: base.rs  mod.rs
crates/gulfi-openai/: Cargo.toml
crates/gulfi-openai/src/: embedding_message.rs  lib.rs
crates/gulfi-query/: Cargo.toml
crates/gulfi-query/proptest-regressions/: lib.txt
crates/gulfi-query/src/: lib.rs  tests.rs
crates/gulfi-server/: Cargo.toml  build.rs
crates/gulfi-server/src/: bg_tasks.rs  configuration.rs  extractors.rs  formatter.rs  into_http.rs  lib.rs  search.rs  startup.rs  telemetry.rs  views.rs
crates/gulfi-server/src/routes/: auth.rs  documentos.rs  documents.rs  favorites.rs  favoritos.rs  historial.rs  history.rs  mod.rs  search.rs  serve_ui.rs
crates/gulfi-server/ui/: index.html  jsconfig.json  package.json  pnpm-lock.yaml
crates/gulfi-server/ui/src/: App.svelte  app.css  stores.ts
crates/gulfi-server/ui/src/lib/: DocumentSelector.svelte  Empty.svelte  HistorialFloating.svelte  HistorialList.svelte  HistoryFloating.svelte  HistoryList.svelte  Layout.svelte  Sidebar.svelte  Table.svelte  types.ts  utils.ts
crates/gulfi-server/ui/src/routes/: Fallback.svelte  Favorites.svelte  Favoritos.svelte  Historial.svelte  History.svelte  Home.svelte
crates/gulfi-sqlite/: Cargo.toml
crates/gulfi-sqlite/src/: lib.rs  migrations.rs  pooling.rs
crates/gulfi-ui/: Cargo.toml  build.rs
crates/gulfi-ui/assets/: main.js  styles.css
crates/gulfi-ui/src/: lib.rs
crates/gulfi-ui/templates/: favoritos.html  index.html  table.html
crates/gulfi-ui/ui/: index.html  package.json  pnpm-lock.yaml
crates/gulfi-ui/ui/src/: App.svelte  app.css
crates/gulfi-ui/ui/src/lib/: Layout.svelte  Table.svelte  types.ts
crates/gulfi-ui/ui/src/routes/: Fallback.svelte  Favoritos.svelte  Home.svelte
crates/gulfi/src/: lib.rs  main.rs  startup.rs
crates/gulfi/src/routes/: assets.rs  favoritos.rs  historial.rs  index.rs  mod.rs  search.rs  serve_ui.rs
scripts/: deploy.sh
