[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
license = "GPL-3.0"

[profile.release]
incremental = true
lto = "thin"

# candle-nn = { version = "0.7.2", optional = true }
# candle-core ={version = "0.7.2", optional = true }
# hf-hub ={version = "0.3.2", optional = true }
# tokenizers ={version = "0.20.1", optional = true }
# candle-transformers ={version = "0.7.2", optional = true }
# [features] 
# local = ["dep:candle-nn", "dep:candle-core",  "dep:hf-hub" ,"dep:tokenizers", "dep:candle-transformers"]

[workspace.dependencies]
thiserror = "2.0.3"
chrono = "0.4.39"
indicatif = "0.17.11"
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "full"] }
tracing = "0.1.40"
http = "1.1.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
zerocopy = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "deflate"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
serde_urlencoded = "0.7.1"
camino = "1.1.9"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }


[profile.profiling]
inherits = "release"
debug = true

