[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
license = "GPL-3.0"
rust-version = "1.88"

[profile.release]
incremental = true
lto = "thin"

[workspace.dependencies]
thiserror = "2.0.3"
chrono = "0.4.39"
indicatif = "0.17.11"
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "full"] }
tracing = "0.1.40"
http = "1.1.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
zerocopy = "0.8.5"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "deflate"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
serde_urlencoded = "0.7.1"
camino = "1.1.9"
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
config = "0.15.11"
serde-aux = "4.7.0"
secrecy = { version = "0.10.3", features = ["serde"] }


[profile.profiling]
inherits = "release"
debug = true

