[package]
name = "gulfi-cli"
edition = "2024"
license.workspace = true
version.workspace = true


[dependencies]
clap = { workspace = true, features = ["cargo"] }
eyre.workspace = true
color-eyre.workspace = true
serde_json.workspace = true
serde.workspace = true

gulfi-common = { path = "../gulfi-common/"}
