[package]
name = "gulfi-common"
edition = "2024"
version.workspace = true

[dependencies]
eyre.workspace = true
camino.workspace = true
color-eyre.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tracing.workspace = true
rinja.workspace = true
rinja_axum.workspace = true
serde_urlencoded.workspace = true
chrono.workspace = true
termcolor = "1.4.1"
ammonia = "4.0.0"
ansi_term = "0.12.1"
