[package]
name = "gulfi-ingest"
edition = "2024"
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sqlite-vec = "0.1.6"
futures = "0.3.31"
csv = "1.3.0"
ammonia = "4.0.0"
crossbeam = "0.8.4"

zerocopy.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tokio.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
eyre.workspace = true
camino.workspace = true

gulfi-openai = { path = "../gulfi-openai/" }

