[package]
name = "gulfi-openai"
edition = "2024"
version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
indicatif.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
eyre.workspace = true
color-eyre.workspace = true
rand = "0.9.0"
