[package]
name = "gulfi-sqlite"
edition = "2024"
version.workspace = true

[dependencies]
sqlite-vec = "0.1.3"
futures = "0.3.31"
csv = "1.3.0"
zerocopy.workspace = true
eyre.workspace = true
rusqlite.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
gulfi-openai = { path = "../gulfi-openai/" }
gulfi-ui = { path = "../gulfi-ui/" }
gulfi-cli = { path = "../gulfi-cli/" }
gulfi-common = { path = "../gulfi-common/" }
