[package]
name = "gulfi-sqlite"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
sqlite-vec = "0.1.6"
futures = "0.3.31"
csv = "1.3.0"
zerocopy.workspace = true
thiserror.workspace = true
camino.workspace = true
fs-err.workspace = true
indicatif.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tokio.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true

gulfi-openai = { path = "../gulfi-openai/" }
gulfi-common = { path = "../gulfi-common/" }
crossbeam = "0.8.4"
