[package]
name = "gulfi-ui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lightningcss = "1.0.0-alpha.63"
minify-js = "0.6.0"

[dependencies]
serde.workspace = true
axum.workspace = true
rusqlite.workspace = true
rinja.workspace = true
rinja_axum.workspace = true
# gulfi-sqlite = { path = "../gulfi-sqlite/" }
