[package]
name = "gulfi"
edition = "2024"
authors = ["Lautaro <acostaquintanalautaro@gmail.com>"]
license.workspace = true
version.workspace = true

[lib]
path= "./src/lib.rs"

[dependencies]
eyre.workspace = true
tracing.workspace = true
camino.workspace = true
color-eyre.workspace = true
fs-err.workspace = true
clap.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

gulfi-common = { path = "../gulfi-common/"}
gulfi-cli = { path = "../gulfi-cli/"}

